Foi adicionado arquivos css e jquery

--- a/application/modules/site/views/scripts/index/index.phtml
+++ b/application/modules/site/views/scripts/index/index.phtml
@@ -2,12 +2,12 @@
 <div style="clear:both;"></div>
 <div id="newsSlider">
     <div id="banner_div"></div>
-    <script type="text/javascript" src="js/images/jquery.js"></script>					<!-- Transiçao da imagem -->
-    <script type="text/javascript" src="js/images/jquery.flash.js"></script>				<!-- Transiçao da imagem -->
-    <script type="text/javascript" src="js/images/jquery.dd.js"></script>					<!-- Transiçao da imagem -->
-    <script type="text/javascript" src="js/images/jquery.lightbox.js"></script> 				<!-- Transiçao da imagem -->
-    <script type="text/javascript" src="js/images/cycleFullTransitions2.js"></script>			<!-- Transiçao da imagem -->
-    <link href='css/images/imagem.css' rel="stylesheet" type="text/css" />					<!-- Folha de estilo principal -->
+    <script type="text/javascript" src="/assets/js/images/jquery.js"></script>					<!-- Transiçao da imagem -->
+    <script type="text/javascript" src="/assets/js/images/jquery.flash.js"></script>				<!-- Transiçao da imagem -->
+    <script type="text/javascript" src="/assets/js/images/jquery.dd.js"></script>					<!-- Transiçao da imagem -->
+    <script type="text/javascript" src="/assets/js/images/jquery.lightbox.js"></script> 				<!-- Transiçao da imagem -->
+    <script type="text/javascript" src="/assets/js/images/cycleFullTransitions2.js"></script>			<!-- Transiçao da imagem -->
+    <link href='/assets/css/imagem.css' rel="stylesheet" type="text/css" />					<!-- Folha de estilo principal -->
     <script type="text/javascript" src="js/images/cookies.js"></script>					<!-- Cookies -->
 
     <div id="teaser">
