--- a/public/assets/css/stylesheet.css
+++ b/public/assets/css/stylesheet.css
@@ -16,12 +16,12 @@ p{color:gray;font-size:8pt}
 
 /* Cabeçalhos do menu iniciar */
 .iframe{position:relative;left:-15px;width:945px!important;border:0!important;height:800px!important}
-body{background-image: url(../images/st_background.jpg); }
+body{background-image: url(/images/st_background.jpg); }
 header #paisagem{width:985px;height:48px;background-position:center}
-header #{float:left;width:350px;height:137px;margin-top:8px;background:url(../images/st_.png) no-repeat;text-indent:-1000px}
-header #logo{float:left;width:350px;height:137px;margin-top:8px;background:url(../images/st_logo.png) no-repeat;text-indent:-1000px}
+header #{float:left;width:350px;height:137px;margin-top:8px;background:url(/images/st_.png) no-repeat;text-indent:-1000px}
+header #logo{float:left;width:350px;height:137px;margin-top:8px;background:url(/images/st_logo.png) no-repeat;text-indent:-1000px}
 #container{text-align:left;display:block;width:985px;height:450px;margin:0 auto}
-section #content{display:block;width:985px;min-height:450px;background:url(../images/bg_content.png) no-repeat;margin:0}
+section #content{display:block;width:985px;min-height:450px;background:url(/images/bg_content.png) no-repeat;margin:0}
 section #left{float:left;width:10px;height:44px}
 section #right{float:left;width:9px;height:44px}
 /*#menu{float:left;width:966px;height:47px;font-family:Arial, Garuda, Sans-serif;font-weight:700} */
@@ -31,7 +31,7 @@ section #right{float:left;width:9px;height:44px}
 #menu{width:966px;height:47px;font-family:Arial, Garuda, Sans-serif;font-weight:700} 
 #topnav{float:left;margin-top:3px;height:42px;margin-left:-3px}
 #topnav .hs{background:none}
-#topnav ul li{z-index:10;float:left;display:block;position:relative;width:auto;text-transform:uppercase;height:20px;background:url(../images/separator.gif) no-repeat right;background-position:0 3px;padding:11.5px 10px 10.8px}
+#topnav ul li{z-index:10;float:left;display:block;position:relative;width:auto;text-transform:uppercase;height:20px;background:url(/images/separator.gif) no-repeat right;background-position:0 3px;padding:11.5px 10px 10.8px}
 #topnav .selected a{color:#000!important}
 #topnav ul li a{color:#FFF;text-decoration:none}
 #topnav ul li a:hover{color:#000!important;text-decoration:none}
@@ -58,13 +58,13 @@ section #right{float:left;width:9px;height:44px}
 
 
 
-section #corpo{background:url(../images/bg_content.png) repeat-x #FFF;background-position:0 -100px;min-height:400px;display:block;padding-left:15px;padding-right:15px;margin-top:15px;margin-bottom:15px}
+section #corpo{background:url(/images/bg_content.png) repeat-x #FFF;background-position:0 -100px;min-height:400px;display:block;padding-left:15px;padding-right:15px;margin-top:15px;margin-bottom:15px}
 section #corpo div{text-align:left}
 .tabs ul{list-style:none;margin:0;padding:0}
 .tabs ul li{margin-left:-1px;float:left;height:33px}
 .tabs ul li a{position:relative;text-transform:uppercase;z-index:10;text-align:center;display:block;font-weight:700;color:gray;text-decoration:none;min-width:87px;border:1px solid #DDD;background-color:#FFF;padding:8px 10px}
-.tabs ul li a:hover{background-image:url(../images/bg_tabsHover.jpg)}
-.tabs .selected{z-index:1;background-image:url(../images/bg_tabs.jpg)!important;background-position:0 0;border-bottom:1px solid #fff!important;color:#b31011!important}
+.tabs ul li a:hover{background-image:url(/images/bg_tabsHover.jpg)}
+.tabs .selected{z-index:1;background-image:url(/images/bg_tabs.jpg)!important;background-position:0 0;border-bottom:1px solid #fff!important;color:#b31011!important}
 .tabs #boxtab{position:relative;margin-left:-1px;top:-1px;float:none;clear:both;border:1px solid #DDD;z-index:0;padding:2px}
 
 * html .jspCorner{margin:0 -2px 0 0}
@@ -84,15 +84,15 @@ form textarea:hover{border-color:#000099!important}
 /* Adiciona estilo aos botoes inferiores - */
 footer p{color:gray;font-size:8pt;margin:0 0 2px;padding:0}
 footer{clear:both;margin-top:-15px;display:block;background:#f1f1f1!important;height:140px}
-footer .top{background:url(../images/bg_top_footer.gif) no-repeat;width:985px;height:31px;margin-bottom:10px}
+footer .top{background:url(/images/bg_top_footer.gif) no-repeat;width:985px;height:31px;margin-bottom:10px}
 footer .box{margin-left:10px;padding-left:15px;text-align:left;border-left:1px solid #DDD;min-width:150px;float:left}
 footer h1{text-transform:uppercase;color:#000;margin-bottom:8px}
 footer a{color:gray;text-decoration:none}
-.footer_bottom{background:url(../images/bg_bottom_footer.png) no-repeat;width:985px;height:14px;margin:0 auto}
+.footer_bottom{background:url(/images/bg_bottom_footer.png) no-repeat;width:985px;height:14px;margin:0 auto}
 
 
 /* barras do menu de endereços - no meio - */
-#blockend{text-align:center;position:absolute;left:0;width:100%;height:80px;background:url(../images/blockenda.gif) repeat-x;background-position:bottom}
+#blockend{text-align:center;position:absolute;left:0;width:100%;height:80px;background:url(/images/blockenda.gif) repeat-x;background-position:bottom}
 #blockend .espaco{width:985px;height:35px;margin:0 auto}
 #blockend .espaco p{margin-top:21px;color:#FFF}
 #blockend #footer_gray,#blockend #footer_gray a{color:gray!important}
@@ -103,20 +103,20 @@ footer a{color:gray;text-decoration:none}
 #erro{padding:105px 20px 20px}
 #erro ul{display:block;list-style:none;margin-top:15px}
 #erro h1{color:#F0F0F0;font-size:102pt;margin-left:100px;float:left;margin-top:25px;margin-right:40px}
-.hr{background:url(../images/hr.png) repeat-x;height:2px;margin-top:5px;margin-bottom:10px}
+.hr{background:url(/images/hr.png) repeat-x;height:2px;margin-top:5px;margin-bottom:10px}
 
 /*nos titulos das paginas fica em maiusculo etc./ - */
 #container_d h1{font-weight:700;font-size:9pt;color:#000}
 #container_d h2{font-weight:400;font-size:8pt;color:gray;margin-top:5px}
 #container_d h3{font-size:25pt;letter-spacing:-2px}
-#container_d .left{float:left;width:4px;min-height:150px;background:url(../images/bg_conteudo_left.png) #FFF no-repeat top left}
-#container_d .right{float:left;width:4px;min-height:150px;background:url(../images/bg_conteudo_right.png) #FFF no-repeat top left}
+#container_d .left{float:left;width:4px;min-height:150px;background:url(/images/bg_conteudo_left.png) #FFF no-repeat top left}
+#container_d .right{float:left;width:4px;min-height:150px;background:url(/images/bg_conteudo_right.png) #FFF no-repeat top left}
 #container_d{text-align:justify!important}
-#container_d .conteudo{float:left;background:url(../images/bg_conteudo.png) #FFF repeat-x;width:925px;padding:10px}
+#container_d .conteudo{float:left;background:url(/images/bg_conteudo.png) #FFF repeat-x;width:925px;padding:10px}
 
 
 /* imagem com setinha */
-.bullet{display:block;background:url(../images/bullet.gif) no-repeat 0 2px;padding-left:14px}
+.bullet{display:block;background:url(/images/bullet.gif) no-repeat 0 2px;padding-left:14px}
 
 
 
@@ -128,11 +128,11 @@ footer a{color:gray;text-decoration:none}
 .leitura {margin-right:30px; margin-left:30px}
 
 .autor img{border:3px solid #F2F2F2}
-.bt{background:url(../images/button_coment.gif) no-repeat;width:142px;height:31px;text-align:center!important;cursor:pointer}
-.bt:hover{background:url(../images/button_comentHover.gif) no-repeat;color:#FFF!important}
+.bt{background:url(/images/button_coment.gif) no-repeat;width:142px;height:31px;text-align:center!important;cursor:pointer}
+.bt:hover{background:url(/images/button_comentHover.gif) no-repeat;color:#FFF!important}
 .bt span{padding-top:8px;display:block}
 #topnav ul,#menuLinks li{list-style:none}
-#topnav ul li:hover,#topnav .selected{color:#000!important;background-image:url(../images/bg_tab.png);background-repeat:no-repeat;background-position:2px 6px}
+#topnav ul li:hover,#topnav .selected{color:#000!important;background-image:url(/images/bg_tab.png);background-repeat:no-repeat;background-position:2px 6px}
 #bar img,.jspHorizontalBar .jspCap{float:left}
 footer a:hover,#blockend #footer_gray a:hover,#dock a:hover{text-decoration:underline}
 
