--- a/application/modules/admin/layout/layout.phtml
+++ b/application/modules/admin/layout/layout.phtml
@@ -57,7 +57,7 @@
                                 <a class="itemMenu">Funcionários</a>
                                 <div class="conteudoMenu">
                                     <a href="paginas/consultarFuncionarios.html" target="principal">Consultar</a>
-                                    <a href="paginas/cadastrarFuncionarios.html" target="principal">Cadastrar</a>
+                                    <a href="/admin/pessoa/cadastro">Cadastrar</a>
 
                                 </div>
                             </li>
