--- a/application/modules/site/layout/layout.phtml
+++ b/application/modules/site/layout/layout.phtml
@@ -27,7 +27,7 @@
 
         <!-- JQuerys  -->        
         <!-- JQuerys  -->        
-        <script src="/js/jquery-1.5.min.js"></script> <!-- MENUS SUPERIORES --> 
+        <script src="/assets/js/jquery.js"></script> <!-- MENUS SUPERIORES --> 
         <script src="/js/commons.js"></script><!-- MENUS SUPERIORES --> 
         <script src="/js/jquery.idTabs.js"></script>  <!-- JPEG NO IE6 -->   
         <script src="/js/swfobject/swfobject.js"></script> <!--Gera HTML/XHTML valido -->  
@@ -35,7 +35,7 @@
         <!-- Fim JQuerys  -->
 
         <!-- Adição de folhas de estilos  -->        
-        <link href="/css/stylesheet.css" rel="stylesheet" type="text/css" media="screen" />
+        <link href="/assets/css/stylesheet.css" rel="stylesheet" type="text/css" media="screen" />
 
         <!--[if lt IE 9]>
         <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
