Correção de conflitos

--- a/application/modules/site/layout/layout.phtml
+++ b/application/modules/site/layout/layout.phtml
@@ -28,9 +28,9 @@
         <!-- JQuerys  -->        
         <!-- JQuerys  -->        
         <script src="/assets/js/jquery.js"></script> <!-- MENUS SUPERIORES --> 
-        <script src="/assets/js/commons.js"></script> MENUS SUPERIORES  
-        <script src="/assets/js/jquery.idTabs.js"></script>   JPEG NO IE6    
-        <script src="/assets/js/swfobject.js"></script> Gera HTML/XHTML valido   
+        <script src="/assets/js/commons.js"></script> <!-- MENUS SUPERIORES -->  
+        <script src="/assets/js/jquery.idTabs.js"></script> <!--  JPEG NO IE6 -->    
+        <script src="/assets/js/swfobject.js"></script> <!--  Gera HTML/XHTML valido   -->   
         <!-- Fim JQuerys  -->
         <!-- Fim JQuerys  -->
 
