Alterações feitas no layout do modulo adm e acrescentando a controller/views cadastrarPaciente

--- a/application/modules/admin/views/scripts/cadastrar-paciente/index.phtml
+++ b/application/modules/admin/views/scripts/cadastrar-paciente/index.phtml
@@ -7,7 +7,14 @@
         font-size: 20pt;
         width: 550pt;
         margin: 10px 0 30px 5px;
-       
+
+    }
+    li a:hover{
+        color: #CB0101;
+
+    }
+    li a:active{
+        border-style: none;
     }
 
 </style>
@@ -18,29 +25,28 @@
     <h1 id="aa">Cadastrar Pacientes</h1>
 
 
-
-
-
-<div style="margin-bottom: 18px;" class="tabbable">
-    <ul class="nav nav-tabs">
-        <li class=""><a data-toggle="tab" href="#tab1">Dados Principais</a></li>
-        <li class="active"><a data-toggle="tab" href="#tab2">Endereço</a></li>
-        <li class=""><a data-toggle="tab" href="#tab3">Dados Complementares</a></li>
-    </ul>
-    <div style="padding-bottom: 9px; border-bottom: 1px solid #ddd;" class="tab-content">
-        <div id="tab1" class="tab-pane">
-            <p>I'm in Section 1.</p>
-        </div>
-        <div id="tab2" class="tab-pane active">
-            <p>Howdy, I'm in Section 2.</p>
-        </div>
-        <div id="tab3" class="tab-pane">
-            <p>What up girl, this is Section 3.</p>
+    <div style="margin-bottom: 18px;" class="tabbable">
+        <ul class="nav nav-tabs">
+            <li class="active"><a data-toggle="tab" href="#tab1">Section 1</a></li>
+            <li class=""><a data-toggle="tab" href="#tab2">Section 2</a></li>
+            <li class=""><a data-toggle="tab" href="#tab3">Section 3</a></li>
+        </ul>
+        <div style="padding-bottom: 9px; border-bottom: 1px solid #ddd;" class="tab-content">
+            <div id="tab1" class="tab-pane active">
+                <p>I'm in Section 1.</p>
+            </div>
+            <div id="tab2" class="tab-pane">
+                <p>Howdy, I'm in Section 2.</p>
+            </div>
+            <div id="tab3" class="tab-pane">
+                <p>What up girl, this is Section 3.</p>
+            </div>
         </div>
     </div>
-</div>
 
 </div>
+
+
 
 
 
