--- a/application/modules/admin/views/scripts/cadastrar-paciente/index.phtml
+++ b/application/modules/admin/views/scripts/cadastrar-paciente/index.phtml
@@ -16,6 +16,9 @@
     li a:active{
         border-style: none;
     }
+    .tabbable{
+        height: auto;
+    }
 
 </style>
 
@@ -27,20 +30,233 @@
 
     <div style="margin-bottom: 18px;" class="tabbable">
         <ul class="nav nav-tabs">
-            <li class="active"><a data-toggle="tab" href="#tab1">Section 1</a></li>
-            <li class=""><a data-toggle="tab" href="#tab2">Section 2</a></li>
-            <li class=""><a data-toggle="tab" href="#tab3">Section 3</a></li>
+            <li class="active"><a data-toggle="tab" href="#tab1">Dados Principais</a></li>
+            <li class=""><a data-toggle="tab" href="#tab2">Endereço</a></li>
+            <li class=""><a data-toggle="tab" href="#tab3">Dados Complementares</a></li>
         </ul>
         <div style="padding-bottom: 9px; border-bottom: 1px solid #ddd;" class="tab-content">
             <div id="tab1" class="tab-pane active">
-                <p>I'm in Section 1.</p>
-            </div>
+
+                <!--INICIO DO PRIMEIRO FORM-->
+
+                <p><form class="bs-docs-example form-horizontal">
+                    <div class="control-group">
+                        <label for="inputEmail" class="control-label">Nome Completo:</label>
+                        <div class="controls">
+                            <input type="text" placeholder="Text input">
+                        </div>
+                    </div>
+                    <div class="control-group">
+                        <label for="inputEmail" class="control-label">Nome do Pai:</label>
+                        <div class="controls">
+                            <input type="text" placeholder="Text input">
+                        </div>
+                    </div>
+                    <div class="control-group">
+                        <label for="inputEmail" class="control-label">Nome da Mãe:</label>
+                        <div class="controls">
+                            <input type="text" placeholder="Text input">
+                        </div>
+                    </div>
+                    <div class="control-group">
+                        <label for="inputEmail" class="control-label">Data de Nascimento:</label>
+                        <div class="controls">
+                            <input type="text" placeholder="Text input">
+                        </div>
+                    </div>
+                    <div class="control-group">
+                        <label for="inputEmail" class="control-label">Estado Civil:</label>
+                        <div class="controls">
+                            <select>
+                                <option>Selecione a opção</option>
+                                <option>Casado</option>
+                                <option>Solteiro</option>
+                                <option>Divorciado</option>
+                                <option>Viúvo</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="control-group">
+                        <label for="inputEmail" class="control-label">Sexo:</label>
+                        <div class="controls">
+                            <label class="radio">
+                                <input type="radio" name="optionsRadios" id="optionsRadios1" value="option1" checked>Masculino</label>
+                            <label class="radio">
+                                <input type="radio" name="optionsRadios" id="optionsRadios2" value="option2">Feminino</label>
+
+                        </div>
+                    </div>
+                    <div class="control-group">
+                        <label for="inputEmail" class="control-label">RG Nº:</label>
+                        <div class="controls">
+                            <input type="text" placeholder="Text input">
+                        </div>
+                    </div>
+                    <div class="control-group">
+                        <label for="inputEmail" class="control-label">CPF Nº:</label>
+                        <div class="controls">
+                            <input type="text" placeholder="Text input">
+                        </div>
+                    </div>
+                    <div class="control-group">
+
+                        <div class="controls">
+                            <button class="btn" type="submit">Salvar</button>
+                            <button class="btn" type="reset">Limpar</button>
+
+                        </div>
+                    </div>
+
+                </form></p>
+
+            </div> <!--FIM DO PRIMEIRO MENU-->
+
+
             <div id="tab2" class="tab-pane">
-                <p>Howdy, I'm in Section 2.</p>
-            </div>
+
+                <!--INICIO DO SEGUNDO FORM-->
+
+                <p><form class="bs-docs-example form-horizontal">
+                    <div class="control-group">
+                        <label for="inputEmail" class="control-label">Rua:</label>
+                        <div class="controls">
+                            <input type="text" placeholder="Text input">
+                        </div>
+                    </div>
+                    <div class="control-group">
+                        <label for="inputEmail" class="control-label">Complemento: </label>
+                        <div class="controls">
+                            <input type="text" placeholder="Text input">
+                        </div>
+                    </div>
+                    <div class="control-group">
+                        <label for="inputEmail" class="control-label">Número:</label>
+                        <div class="controls">
+                            <input type="text" placeholder="Text input">
+                        </div>
+                    </div>
+                    <div class="control-group">
+                        <label for="inputEmail" class="control-label">Bairro:</label>
+                        <div class="controls">
+                            <input type="text" placeholder="Text input">
+                        </div>
+                    </div>
+                    <div class="control-group">
+                        <label for="inputEmail" class="control-label">CEP:</label>
+                        <div class="controls">
+                            <input type="text" placeholder="Text input">
+                        </div>
+                    </div>
+                    <div class="control-group">
+                        <label for="inputEmail" class="control-label">UF:</label>
+                        <div class="controls">
+                            <select>
+                                <option value="0">Selecione o Estado</option>
+                                <option value="ac">Acre</option>
+                                <option value="al">Alagoas</option>
+                                <option value="ap">Amapá</option>
+                                <option value="am">Amazonas</option>
+                                <option value="ba">Bahia</option>
+                                <option value="ce">Ceará</option>
+                                <option value="df">Distrito Federal</option>
+                                <option value="es">Espirito Santo</option>
+                                <option value="go">Goiás</option>
+                                <option value="ma">Maranhão</option>
+                                <option value="ms">Mato Grosso do Sul</option>
+                                <option value="mt">Mato Grosso</option>
+                                <option value="mg">Minas Gerais</option>
+                                <option value="pa">Pará</option>
+                                <option value="pb">Paraíba</option>
+                                <option value="pr">Paraná</option>
+                                <option value="pe">Pernambuco</option>
+                                <option value="pi">Piauí</option>
+                                <option value="rj">Rio de Janeiro</option>
+                                <option value="rn">Rio Grande do Norte</option>
+                                <option value="rs">Rio Grande do Sul</option>
+                                <option value="ro">Rondônia</option>
+                                <option value="rr">Roraima</option>
+                                <option value="sc">Santa Catarina</option>
+                                <option value="sp">São Paulo</option>
+                                <option value="se">Sergipe</option>
+                                <option value="to">Tocantins</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="control-group">
+                        <label for="inputEmail" class="control-label">Cidade:</label>
+                        <div class="controls">
+                            <input type="text" placeholder="Text input">
+                        </div>
+                    </div>
+                    
+                    <div class="control-group">
+
+                        <div class="controls">
+                            <button class="btn" type="submit">Salvar</button>
+                            <button class="btn" type="reset">Limpar</button>
+
+                        </div>
+                    </div>
+
+                </form></p>
+
+
+            </div> <!--FIM DO SEGUNDO MENU-->
+
+
             <div id="tab3" class="tab-pane">
-                <p>What up girl, this is Section 3.</p>
-            </div>
+                
+                <!--INICIO DO TERCEIRO FORM-->
+
+                <p><form class="bs-docs-example form-horizontal">
+                    <div class="control-group">
+                        <label for="inputEmail" class="control-label">Telefone residêncial:</label>
+                        <div class="controls">
+                            <input type="text" placeholder="Text input">
+                        </div>
+                    </div>
+                    <div class="control-group">
+                        <label for="inputEmail" class="control-label">Telefone celular:</label>
+                        <div class="controls">
+                            <input type="text" placeholder="Text input">
+                        </div>
+                    </div>
+                    <div class="control-group">
+                        <label for="inputEmail" class="control-label">E-mail:</label>
+                        <div class="controls">
+                            <input type="text" id="inputEmail" placeholder="Email">
+                        </div>
+                    </div>
+                    <div class="control-group">
+                        <label for="inputEmail" class="control-label">Usuário:</label>
+                        <div class="controls">
+                            <input type="text" placeholder="Text input">
+                        </div>
+                    </div>
+                    <div class="control-group">
+                        <label for="inputEmail" class="control-label">Senha:</label>
+                        <div class="controls">
+                            <input type="password" id="inputPassword" placeholder="Password">
+                        </div>
+                    </div>
+                    <div class="control-group">
+                        <label for="inputEmail" class="control-label">Confirmar-Senha:</label>
+                        <div class="controls">
+                            <input type="password" id="inputPassword" placeholder="Password">
+                        </div>
+                    </div>
+                    <div class="control-group">
+
+                        <div class="controls">
+                            <button class="btn" type="submit">Salvar</button>
+                            <button class="btn" type="reset">Limpar</button>
+
+                        </div>
+                    </div>
+
+                </form></p>
+                
+            </div> <!--FIM DO TERCEIRO MENU-->
         </div>
     </div>
 
