--- a/application/modules/admin/layout/layout.phtml
+++ b/application/modules/admin/layout/layout.phtml
@@ -57,8 +57,8 @@
                             <li>
                                 <a style="background: #ffcc99;" class="itemMenu">Funcionários</a>
                                 <div class="conteudoMenu">
-                                    <a href="paginas/consultarFuncionarios.html" target="principal">Consultar</a>
-                                    <a href="/admin/pessoa/cadastro">Cadastrar</a>
+                                    <a href="/admin/consultar-funcionario">Consultar</a>
+                                    <a href="/admin/cadastrar-funcionario">Cadastrar</a>
 
                                 </div>
                             </li>
@@ -71,22 +71,15 @@
                             </li>
                             <li><a style="background: #ffcc99;" class="itemMenu">Vacinas</a>
                                 <div class="conteudoMenu">
-                                    <a href="paginas/consultarVacinas.html" target="principal">Consultar</a>
-                                    <a href="paginas/cadastrarVacinas.html" target="principal">Cadastrar</a>
-
-                                </div>
-                            </li>
-                            <li><a style="background: #ffcc99;" class="itemMenu">Calendários de Vacinas</a>
-                                <div class="conteudoMenu">
-                                    <a href="paginas/consultarVacinas.html" target="principal">Consultar</a>
-                                    <a href="paginas/cadastrarVacinas.html" target="principal">Cadastrar</a>
+                                    <a href="/admin/consultar-vacina">Consultar</a>
+                                    <a href="/admin/cadastrar-vacina">Cadastrar</a>
 
                                 </div>
                             </li>
                             <li><a style="background: #ffcc99;" class="itemMenu">Cartão de Vacinas</a>
                                 <div class="conteudoMenu">
-                                    <a href="paginas/consultarVacinas.html" target="principal">Consultar</a>
-                                    <a href="paginas/cadastrarVacinas.html" target="principal">Cadastrar</a>
+                                    <a href="/admin/consultar-cartao">Consultar</a>
+                                    <a href="/admin/cadastrar-cartao">Cadastrar</a>
                                 </div>
                             </li>
                         </ul>                   
