Copiando o formulario do cadastro funcionario para o arquivo cadastro paciente

--- a/application/modules/admin/views/scripts/pessoa/cadastro-funcionario.phtml
+++ b/application/modules/admin/views/scripts/pessoa/cadastro-funcionario.phtml
@@ -103,7 +103,7 @@
                     <div class="control-group">
 
                         <div class="controls">
-                            <a class="btn btn-primary" href="#tab2" data-toggle="tab">Avançar</a>
+                            <a class="btn btn-primary" href="#tab2" data-toggle="tab"><i class="icon-forward icon-white"></i></a>
                         </div>
                     </div>
 
@@ -190,8 +190,8 @@
                     <div class="control-group">
 
                         <div class="controls">
-                            <a class="btn btn-primary" href="#tab3" data-toggle="tab">Avançar</a>
-                            <a class="btn btn-primary" href="#tab1" data-toggle="tab">Voltar</a>
+                            <a class="btn btn-primary" href="#tab3" data-toggle="tab"><i class="icon-forward icon-white"></i></a>
+                            <a class="btn btn-primary" href="#tab1" data-toggle="tab"><i class="icon-backward icon-white"></i></a>
                         </div>
                     </div>
                 </div> <!--FIM DO SEGUNDO MENU-->
@@ -277,8 +277,8 @@
                     <div class="control-group">
 
                         <div class="controls">
-                            <button class="btn" type="submit">Salvar</button>
-                            <button class="btn" type="reset">Limpar</button>
+                            <button class="btn btn-info" type="submit">Salvar</button>
+                            <button class="btn btn-info" type="reset">Limpar</button>
 
                         </div>
                     </div>
