Foi criado a controller vacina e cartao; foi criado as actions e views: cadastro-vacina, consulta-vacina, cadastro-cartao, consulta-cartao

--- a/application/modules/admin/views/scripts/index/index.phtml
+++ b/application/modules/admin/views/scripts/index/index.phtml
@@ -1,1 +1,41 @@
-Index
+<style type="text/css">
+
+    h1#aa{
+        background-color: #ffcc99;
+        text-align: center;
+        font-size: 20pt;
+        width: 550pt;
+        margin: 10px 0 30px 5px;
+
+    }
+    li a:hover{
+        color: #CB0101;
+
+    }
+    li a:active{
+        border-style: none;
+    }
+
+    .tabbable{
+        height: auto;
+    }
+
+    div #content{
+        width: 745px;
+        height:700px;
+        margin: 0 0 0 355px;
+        padding: 40px;
+        background: #fff;
+    }
+
+
+
+</style>
+
+
+
+<div class="span9">
+
+    <h1>Seja bem-vindo Administrador!</h1>
+
+</div>
