--- a/application/modules/admin/layout/layout.phtml
+++ b/application/modules/admin/layout/layout.phtml
@@ -50,7 +50,7 @@
                             <li>
                                 <a style="background: #ffcc99;" class="itemMenu">Administrador</a>
                                 <div class="conteudoMenu">
-                                    <a href="/admin/perfil">Editar Perfil</a>
+                                    <a href="/admin/perfil/editar">Editar Perfil</a>
 
                                 </div>
                             </li>
@@ -64,22 +64,22 @@
                             </li>
                             <li><a style="background: #ffcc99;" class="itemMenu">Pacientes</a>
                                 <div class="conteudoMenu">
-                                    <a href="/admin/pessoa/consultar-paciente">Consultar</a>
+                                    <a href="/admin/pessoa/consulta-paciente">Consultar</a>
                                     <a href="/admin/pessoa/cadastro-paciente" >Cadastrar</a>
 
                                 </div>
                             </li>
                             <li><a style="background: #ffcc99;" class="itemMenu">Vacinas</a>
                                 <div class="conteudoMenu">
-                                    <a href="/admin/pessoa/vacina/consultar-vacina">Consultar</a>
-                                    <a href="/admin/pessoa/vacina/cadastro-vacina">Cadastrar</a>
+                                    <a href="/admin/vacina/consulta-vacina">Consultar</a>
+                                    <a href="/admin/vacina/cadastro-vacina">Cadastrar</a>
 
                                 </div>
                             </li>
                             <li><a style="background: #ffcc99;" class="itemMenu">Cartão de Vacinas</a>
                                 <div class="conteudoMenu">
-                                    <a href="/admin/pessoa/consultar-cartao">Consultar</a>
-                                    <a href="/admin/pessoa/cadastro-cartao">Cadastrar</a>
+                                    <a href="/admin/cartao/consulta-cartao">Consultar</a>
+                                    <a href="/admin/cartao/cadastro-cartao">Cadastrar</a>
                                 </div>
                             </li>
                         </ul>                   
