--- a/application/modules/admin/views/scripts/cartao/cadastro-cartao.phtml
+++ b/application/modules/admin/views/scripts/cartao/cadastro-cartao.phtml
@@ -35,11 +35,10 @@
 
 
 <div class="span9">
-    <h1 id="aa">Editar Perfil</h1>
+    <h1 id="aa">Cadastrar Cartão de Vacinas</h1>
 
 
     
 
 </div>
-
 
