--- a/application/modules/admin/views/scripts/cartao/consulta-cartao.phtml
+++ b/application/modules/admin/views/scripts/cartao/consulta-cartao.phtml
@@ -35,11 +35,9 @@
 
 
 <div class="span9">
-    <h1 id="aa">Editar Perfil</h1>
+    <h1 id="aa">Consultar Cartão de Vacinas</h1>
 
 
     
 
 </div>
-
-
